# browserdirector

./: .gitignore  Cargo.toml  browserselector.example.json
src/: main.rs
