[package]
name = "browserdirector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
fork = "0.1.22"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
url = "2.4.0"
walkdir = "2.3.3"
